# system_tables_kg

./: README.md  databricks.yml  ontology.ttl  pyproject.toml  setup.py
src/: api2tables.py  iri.py  ontobricks_pipeline.py  pipeline.py
tests/: main_test.py
